# test-results-api

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pylintrc  README.md  deployment.yaml  docker-compose.yml  eslint.config.cjs  junit.xml  mypi.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  release.config.js  tasks.py  update_version.py
.github/workflows/: auto-merge.yaml  ci.yaml  protect-main.yml  release.yaml
app/: __init__.py  main.py
app/api/: cases.py  classes.py  executions.py  probes.py  suites.py  users.py
app/auth/: auth_handler.py  auth_routes.py
app/cli/: main.py
app/core/: config.py  database.py  logging_config.py  security.py
app/models/: __init__.py  case_model.py  class_model.py  execution_model.py  suite_model.py  user_model.py
app/repositories/: __init__.py  case_repo.py  class_repo.py  execution_repo.py  suite_repo.py  user_repo.py
app/services/: __init__.py  auth_service.py  case_service.py  class_service.py  execution_service.py  suite_service.py  user_service.py
docker/: Dockerfile
docs/: index.md  junt_xml.md  semantic-release.md
tests/unit/app/core/: test_database.py
tests/unit/app/repositories/: test_user_repo.py
