[build-system]
requires = ["flit_core>=3.9"]
build-backend = "flit_core.buildapi"

[project]
name = "app"
version = "0.1.0"
description = "FastAPI-based Test Results API with PostgreSQL and Kubernetes Support"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "click>=8.0.1",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlmodel>=0.0.16",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-fastapi-instrumentator>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
    "black>=24.3.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.9.0",
]

[project.scripts]
api = "app.cli.main:cli"
test = "pytest:main"

[tool.flit.sdist]
include = ["app", "tests"]
exclude = ["__pycache__", "*.pyc", "*.pyo"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"